<resources>
    <string name="app_name">WeatherSample</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_weather_list">Places</string>
    <string name="weather_list">Weather list</string>
    <string name="open_drawer_text">Open navigation</string>
    <string name="close_drawer_text">Close navigation</string>
    <string name="add_weather">Add weather</string>
    <string name="temperature_metric">Temperature metric</string>
    <string name="wind_direction">Wind direction</string>
    <string name="weather">Weather</string>
    <string name="place">Place</string>
    <string name="add_weather_place">Add weather place</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="network_error_message">Network error, please check your connection and try again</string>
    <string name="http_error_message">Http error, please try again</string>
    <string name="next_7_days">Next 7 days →</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="today">Today</string>
    <string name="weather_details">Weather Details</string>
    <string name="weather_sample">Weather Sample</string>
    <string name="next_7_days_text">Next 7 days</string>
    <string name="incorrent_input">Incorrect input</string>
    <string name="place_already_written_error_text">This place already written</string>
</resources>