<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/centerGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/placeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="London,"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/placeRegion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="UK"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintTop_toBottomOf="@+id/placeName" />

    <TextView
        android:id="@+id/weatherDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Sat, 6 aug"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintTop_toBottomOf="@+id/placeRegion" />

    <TextView
        android:id="@+id/weatherDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="Today"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/endGuideline"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintTop_toBottomOf="@+id/weatherDate" />

    <ImageView
        android:id="@+id/dayWeatherIcon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/centerGuideline"
        app:layout_constraintTop_toBottomOf="@+id/weatherDay"
        app:srcCompat="@drawable/ic_baseline_weather_24" />

    <TextView
        android:id="@+id/dayWeatherTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="30°"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/dayWeatherIcon"
        app:layout_constraintStart_toStartOf="@+id/centerGuideline"
        app:layout_constraintTop_toTopOf="@+id/dayWeatherIcon" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/dayWeatherBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="dayWeatherIcon, dayWeatherTemp,weatherDay"
        tools:layout_editor_absoluteY="365dp" />

    <TextView
        android:id="@+id/weatherDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Sunny"
        android:textColor="@color/grey"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dayWeatherBarrier" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/weatherPeriods"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        app:flow_horizontalBias="0"
        app:flow_wrapMode="chain"
        app:flow_horizontalStyle="packed"
        app:flow_horizontalGap="20dp"
        app:constraint_referenced_ids="textToday,textTomorrow,textNext7Days"
        app:layout_constraintEnd_toStartOf="@+id/endGuideline"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/weatherDescription" />

    <TextView
        style = "@style/weatherPeriodStyle"
        android:id="@+id/textToday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/today"
         />

    <TextView
        style = "@style/weatherPeriodStyle"
        android:id="@+id/textTomorrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tomorrow" />

    <TextView
        style = "@style/weatherPeriodStyle"
        android:id="@+id/textNext7Days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_7_days"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/weatherChangeList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/corner_radius_background"
        app:layout_constraintEnd_toStartOf="@+id/endGuideline"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/weatherPeriods" />

</androidx.constraintlayout.widget.ConstraintLayout>